Updated Clinical Data

--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -83,6 +83,9 @@
                          <li class="investor-link">
                               <a href="#phases">Phases of Clinical Trials</a>
                          </li>
+                         <li class="investor-link">
+                              <a href="#values">p values and HR values</a>
+                         </li>
                     </ul>
 
                     <section>
@@ -156,7 +159,52 @@
                               a panel of doctors who don't get to see anything but the data.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
 
+                    <section>
+                         <h2 class="section-title" id="values">p values and HR values</h2>
+                         <p>     
+                              The p value is a measure of statistical probability. We use this in clinical trials to determine if the 
+                              data we are seeing is from the trial we designed or if it could have happened by random chance. This is 
+                              not a measure of how well a drug works. That is called clinical significance. The statistical 
+                              significance is a measure of the quality of the data. I can demonstrate this by using and example as the 
+                              math behind it can be complicated.
+                         </p>
+                         <p>
+                              If you have a quarter, and you flip it 5 times, you might expect to get 50% heads and 50% tails. Let 
+                              us assume you flip it and get 4 heads and 1 tail. Is this a valid outcome? First thing we will realize 
+                              is that flipping the coin 5 times probably isn't a good sample size. Just one flip accounts for 20% of 
+                              the count. If we do it again and flip the coin 1,000 times, we might expect 500 head and 500 tails. Now 
+                              let us say we get 495 heads and 505 tails. Is this within the realm of statistical probability? That is 
+                              where the p value comes in. This tell us if the data we collected was valid or if it could have been 
+                              just random chance. For example, let us say we got 400 heads and 600 tails. Now, we might suspect the 
+                              data we got was some how flawed. Maybe our coin was bent and threw off the outcomes. The p value is 
+                              about measuring the quality of the data in a clinical trial.
+                         </p>
+                         <p>
+                              The p value works off a percentage. If you see a p = .01, that means there is a 1% chance the data was 
+                              from random chance. In clinical trials, we insist the accuracy of the data be within 5%. If you see a p 
+                              value = .051, that trial will be considered a failure as the data is untrustworthy and could have been 
+                              due to random chance. Many times you will see a p value like p = .0001 which is just a faction of a 
+                              percent chance that the data was by random chance. A lot of investors focus on this p value in a clinical 
+                              trial as it measure the quality of the trial design. Its a good indicator, but its not the only measure 
+                              of clinical success. You can be 100% sure of the data you see, but the data is still a failure because it 
+                              is not clinically meaningful. 
+                         </p>
+                         <p>
+                              Another measure used in some clinical trials is a Hazard Ratio (HR). This is the measure of risk between two 
+                              events happening. This is often used to compare the possible risk reduction between two therapies. It is 
+                              also read as a percentage. A HR ration of 1 means that the outcomes of both events were equal. If the HR 
+                              ratio is above 1 then the study drug is doing worse that what it is being compared to. If the HR ratio is 
+                              less than 1, then the study drug has lowered the risk. You might see HR = .7 in a clinical trial. That 
+                              means the risk was lowered by 30% from 1 to .7. Not every trial will have a HR ratio, but it is important 
+                              to understand how to read it when you see one in trial data.
+                         </p>
+                         
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions</p>
                </div>
 
           </main>
