Clinical Data Update

--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -86,6 +86,9 @@
                          <li class="investor-link">
                               <a href="#values">p values and HR values</a>
                          </li>
+                         <li class="investor-link">
+                              <a href="#recist">RECIST Response Rates</a>
+                         </li>
                     </ul>
 
                     <section>
@@ -199,6 +202,58 @@
                               less than 1, then the study drug has lowered the risk. You might see HR = .7 in a clinical trial. That 
                               means the risk was lowered by 30% from 1 to .7. Not every trial will have a HR ratio, but it is important 
                               to understand how to read it when you see one in trial data.
+                         </p>
+                         
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <section>
+                         <h2 class="section-title" id="recist">p values and HR values</h2>
+                         <p>     
+                              When we deal with solid tumors, we use the Response Evaluation Criteria In Solid Tumors (RECIST 1.1) 
+                              standard to evaluate responses. The data shows that 90% of tumors are solid tumor and 10% are liquid 
+                              tumors which use a different set of criteria. It is important to understand the RECIST criteria for 
+                              solid tumors. 
+                         </p>
+                         <p>
+                              They measure the response of a tumor for any therapy using a scan. This is usually a CT scan or 
+                              something similar. They will actually measure the size of the tumor in centimeters. On the next 
+                              scan, they will measure again and the change will be the response. Let us say they scan the tumor 
+                              and its 5cm. Then they do a regimen of treatment and scan again. The tumor is now 4.8cm. That means 
+                              that tumor shrank .2 cm. The math would be 5cm – 4.8cm / 5cm =  or .2 / 5cm = .04 or 4% decrease in 
+                              the tumor size. One thing to know about RECIST responses is they tend to be backward. When the 
+                              tumor shrinks, the response is positive so a 4% smaller tumor is actually a +4% response. When the 
+                              tumor gets bigger, you have a negative response. So if the tumor grew from 5cm to 5.2cm, the 
+                              response would be -4%. The one exception to these criteria is the appearance of new lesions or 
+                              tumors. It wont matter how much the measure tumor shrinks if a new lesion or tumor pops up on the 
+                              scan. That is immediately treated as Progressive Disease. 
+                         </p>
+                         <p>
+                              There are 4 different responses a patient can have. The first is a Complete Response (CR) which 
+                              means no detectable tumor or lesion can be seen on the scan. That doesn't mean it is 100% gone. It just
+                              means it is now too small to be seen on the scans. We consider that a complete response to that therapy. 
+                              The next response is a Partial Response (PR). That is where the tumor has shrunk +30% or more. That means
+                              our 5cm tumor would have to shrink to about 3.5cm to reach a 30% reduction. The next response is called 
+                              Stable Disease (SD). Anything from a +30% response to a -20% growth in the tumor is considered stable 
+                              disease. Progressive Disease (PD) is anything over -20% where the tumor has grown bigger than 20%. 
+                         </p>
+                         <p>
+                              Objective Response Rate (ORR) measures only the Complete Responses and the Partial Responses. This is
+                              what we use in cancer trials. We only want to know what percent of patients had a good response to 
+                              that therapy. Some companies will use a Clinical Benefit Rate (CBR), but we don't use them as 
+                              investors. They tend to do that when the ORR would look too poorly on their therapy. As an investor, 
+                              you only care about ORR.
+                         </p>
+                         <p>
+                              You can calculate to ORR from the data if it is not presented for you. Let us say you see a trial 
+                              where they enrolled 40 patients. They only had 20 patients eligible for a readout at the time of the 
+                              data collection. Of those 20 patients, we see 2 CR, 5 PR, 5 SD and 8 PD. We know how each of these rates 
+                              are calculate so we just plug in the numbers. The CR is 2 + the PR is 5 = 7 total patients had a response 
+                              out of 20 which is 7/20 = 35% ORR. If a company tries to report a CBR rate which looks impressive, we can 
+                              adjust the CBR, for example, the the CBR of 2 CR + 5 PR + 5 SD = 12 out of 20 patients for a CBR rate of 
+                              60%. That looks much more impressive, but if we do the math ourselves and calculate the ORR we will see 
+                              the real response was 35% ORR. In my experience an ORR rate in the low to mid 30's is about average 
+                              cancer therapies.
                          </p>
                          
                          <p class="top-link"><a href="#top">Top</a></p>
