--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
                               <h2 class="section-title">Youtube Featured Video</h2>
                               <div class="videos">
                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_mEix37P65c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                         
                               </div>
                          </div>
                     </section>
@@ -99,7 +98,7 @@
                          <div>
                               <h2 class="section-title">Twitter Featured Thread</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Insightful <a href="https://twitter.com/GENbio?ref_src=twsrc%5Etfw">@GENbio</a> interview featuring <a href="https://twitter.com/a16z?ref_src=twsrc%5Etfw">@a16z</a> general partner and Scribe board member <a href="https://twitter.com/vijaypande?ref_src=twsrc%5Etfw">@vijaypande</a>. We’re proud to have the support of leading biotech and healthcare investors in our <a href="https://twitter.com/hashtag/CRISPRbyDesign?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPRbyDesign</a> approach to engineering <a href="https://twitter.com/hashtag/CRISPR?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPR</a> enzymes and therapies. <a href="https://t.co/Wiccj4bo05">https://t.co/Wiccj4bo05</a></p>&mdash; Scribe Therapeutics (@scribetx) <a href="https://twitter.com/scribetx/status/1620479404563374093?ref_src=twsrc%5Etfw">January 31, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">🧵RECIST Responses in Solid Tumors<br><br>Here we will look at the response rates in solid tumors.</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1620842262371663872?ref_src=twsrc%5Etfw">February 1, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
