--- a/pages/companies.html
+++ b/pages/companies.html
@@ -88,7 +88,7 @@
                                    <a href="../pages/recursion.html">Recursion Pharma (RXRX)</a>
                               </li>
                               <li class="tech-list">
-                                   <a href="../pages/excientia.html">Exscientia (EXAI)</a>
+                                   <a href="../pages/exscientia.html">Exscientia (EXAI)</a>
                               </li>
                               <li class="tech-list">
                                    <a href="../pages/abcellera.html">AbCellera (ABCL)</a>
