--- a/learning/hematology.html
+++ b/learning/hematology.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Learn about concepts of Hematoloby like Red Blood Cells, Platelets, Anemia, Clotting and Coagulation">
+          <meta name="description" content="Learn about concepts of Hematology like Red Blood Cells, Platelets, Anemia, Clotting and Coagulation">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
