--- a/pages/abcellera.html
+++ b/pages/abcellera.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="TechBio, Genomics, Sequencing, Synthetic Biology, and iPSC">
+          <meta name="description" content="Profile of Abcellera for Techbio, Antibodies, AI and Machine Learning">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
