--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="TechBio, Genomics, Sequencing, Synthetic Biology, and iPSC">
+          <meta name="description" content="Learn about Phases of Clinical Trials, Response Rates and Criteria">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
@@ -208,7 +208,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="recist">p values and HR values</h2>
+                         <h2 class="section-title" id="recist">RECIST Response Rates</h2>
                          <p>     
                               When we deal with solid tumors, we use the Response Evaluation Criteria In Solid Tumors (RECIST 1.1) 
                               standard to evaluate responses. The data shows that 90% of tumors are solid tumor and 10% are liquid 
