--- a/pages/exscientia.html
+++ b/pages/exscientia.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Excientia Profile</title>
+          <title>Exscientia Profile</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="TechBio, Genomics, Sequencing, Synthetic Biology, and iPSC">
+          <meta name="description" content="Profile of Exscientia in TechBio, AI and Machine Learning">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
