--- a/pages/twist.html
+++ b/pages/twist.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="TechBio, Genomics, Sequencing, Synthetic Biology, and iPSC">
+          <meta name="description" content="Profile for Twist Biosciences in DNA Synthesis, NGS, SynBio and DNA storage">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
