--- a/pages/companies.html
+++ b/pages/companies.html
@@ -121,7 +121,7 @@
                     </section>  
 
                     <section>
-                         <h2 class="section-title">Genomics</h2>
+                         <h2 class="section-title">Sequencing</h2>
                          <ol>
                               <li class="tech-list">
                                    <a href="../pages/invitae.html">Invitae (NVTA)</a>
