--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -81,6 +81,7 @@
                     <ol class="list-align">
                          <li class="tech-list"><a href="#techbio">TechBio</a></li>
                          <li class="tech-list"><a href="#CRISPR">CRISPR</a></li>
+                         <li class="tech-list"><a href="#sequencing">Sequencing</a></li>
                          <li class="tech-list"><a href="#synbio">Synthetic Biology</a></li>
                          <li class="tech-list"><a href="#ipsc">iPSC</a></li>
                          <li class="tech-list"><a href="#personalized">Personalized Medicine</a></li>
@@ -131,6 +132,23 @@
                          The ability of gene editing tools to give us the ability to change the genetic code of people, plants,
                          animals, and microbes could change the world. It can help us solve some of our biggest environmental issues like carbon 
                          emissions and global warming. Combined with other technologies, it can be a very powerful tool.
+                    </p>
+                    <p class="top-link"><a href="#top">Top</a></p>
+               </section>
+
+               <section class="container" id="sequencing">
+                    <h2 class="section-title">Sequencing</h2>
+                    <p class="large-text">
+                         The demand for DNA sequencing is expected to more than triple over the next decade. We are in a new world of
+                         gene sequencing and the race for an end to end sequencing system has begun. The desire to push down the cost 
+                         of sequencing will continue to drive demand. There is a ton of growth demand from areas like Genetic Disease, Women's 
+                         Health and Oncology. The need for testing in Oncology drives a dominante share of testing. Targeted Therapies, 
+                         Personalized Cancer vaccines and Minimal Residual Disease are driving an explosion of demand for genetic sequencing. 
+                         The sequencing market is split into short and long reads. There is a lot of room for companies to innovating in both 
+                         these segments. The ability to collect genomic information on patients will bring about the era of personalized 
+                         medicine where genetic sequencing informs treatment. Genomic databases can connect researchers with new therapies 
+                         to patient in need of those therapies. Access to the population level genetic data from these data bases can 
+                         inform researchers where new treatmenst are needed.
                     </p>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
